--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Leaf IDE</string>
+    <string name="app_name" translatable="false">Leaf IDE</string>
+    <string name="setup_welcome">Welcome</string>
+    <string name="setup_description">Simple user interface, smart completion, and smooth animation are all at your fingertips.</string>
 </resources>
