--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="setup_description">简洁的用户界面，灵动的补全，平滑的动画跃然指上。</string>
     <string name="setup_welcome">欢迎</string>
+    <string name="permission_request">权限申请</string>
 </resources>
